use record; add tests